# m365-mcp-server

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  railway.json
app/clients/: powerbi_client.py
m365_mcp/auth/: device_code.py
src/m365_mcp/: __init__.py  __main__.py  config.py
src/m365_mcp/auth/: __init__.py  device_code.py  oauth_web.py  token_cache.py  token_manager.py  token_store.py  token_store_file.py  token_store_pg.py
src/m365_mcp/clients/: __init__.py  graph_client.py  powerbi_client.py
src/m365_mcp/services/: __init__.py  excel.py  office_docs.py  onedrive.py  outlook.py  powerbi.py  powerbi_service.py  sharepoint.py  teams.py  todo_service.py  users_service.py
src/m365_mcp/tools/: __init__.py  auth.py  excel.py  office_docs.py  onedrive.py  outlook.py  powerbi.py  sharepoint.py  teams.py  todo.py  users.py
