[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "m365-mcp-server"
version = "2.0.0"
description = "Microsoft 365 MCP server — multi-user OAuth, modular tools"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Paul Turek"}]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "msal>=1.28.0",
    "python-dotenv>=1.0.0",
    # Multi-user OAuth (NEW)
    "cryptography>=42.0.0",
    # Option B — PostgreSQL token store (optional at runtime)
    "asyncpg>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3.0",
]

[project.scripts]
m365-mcp = "m365_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/m365_mcp"]

[tool.ruff]
target-version = "py311"
line-length = 100
