[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "m365-mcp-server"
version = "2.1.1"
description = "Microsoft 365 MCP Server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "msal>=1.28.0",
    "httpx>=0.27.0",
    "cryptography>=42.0.0",
    "asyncpg>=0.29.0",
    "python-dotenv>=1.0.0",
    "mcp[cli]>=1.0.0",
]

[project.optional-dependencies]
prod = []

[tool.hatch.build.targets.wheel]
packages = ["src/m365_mcp"]

[tool.hatch.build.targets.sdist]
include = ["src/", "README.md", "pyproject.toml"]
